# FinGaurd

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE_SCHEMA_DESIGN.md  DATABASE_SCHEMA_DIAGRAM.md  LICENSE  Makefile  PHASE_0_COMPLETE.md  QUICKSTART.md  README.md  SETUP.md  USER_STORIES.md  brutal_test_suite.sh  comprehensive_api_test.sh  controller_test_suite.sh  debug_auth_test.sh  docker-compose.yml  final_comprehensive_test.sh  phase3_brutal_test.sh  render.yaml  simple_test.sh  verify-setup.sh
.github/workflows/: ci.yml  deploy.yml
docs/api/: API_REFERENCE.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/postman/: FinGaurd.postman_collection.json
fraud-detection/: Dockerfile  README.md  fraud_rules.py  main.py  requirements.txt
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
java-service/: Dockerfile  README.md  pom.xml
python-fraud-service/: Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
python-fraud-service/app/: __init__.py  main.py
python-fraud-service/app/api/v1/: fraud.py  health.py
python-fraud-service/app/core/: config.py  logging_config.py
python-fraud-service/app/ml/: __init__.py  model_manager.py
python-fraud-service/app/schemas/: __init__.py  fraud.py  transaction.py
python-fraud-service/app/services/: __init__.py  fraud_detector.py  mongodb_client.py
python-fraud-service/models/: .gitkeep
python-fraud-service/tests/: __init__.py  test_fraud_api_brutal.py  test_health.py
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
(+71 files in other folders)
